--- a/KTA/Assets/Plugins/Android/AndroidManifest.xml
+++ b/KTA/Assets/Plugins/Android/AndroidManifest.xml
@@ -8,10 +8,12 @@
         android:label="@string/app_name"
         android:icon="@drawable/app_icon"
         android:supportsRtl="true">
+      <meta-data
+        android:name=".UnityActivity"
+        android:value="true"/>
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize">
-
           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -19,4 +21,5 @@
         </activity>
     </application>
 
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 </manifest>
