--- a/KTA/Assets/Plugins/Android/AndroidManifest.xml
+++ b/KTA/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ssmktr.KtrTestApp" android:versionCode="1" android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
+          package="com.ssmktr.KtrTestApp" 
+          android:versionCode="2" 
+          android:versionName="1.1">
+  
   <application android:label="@string/app_name" android:icon="@drawable/app_icon" android:supportsRtl="true">
     <meta-data android:name=".UnityActivity" android:value="true" />
     <activity android:name=".MainActivity" android:configChanges="orientation|screenSize">
