--- a/KTA/Assets/Plugins/Android/AndroidManifest.xml
+++ b/KTA/Assets/Plugins/Android/AndroidManifest.xml
@@ -14,4 +14,5 @@
     </activity>
   </application>
   <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission android:name="android.permission.VIBRATE"/>
 </manifest>
