--- a/KTA/Assets/Plugins/Android/AndroidManifest.xml
+++ b/KTA/Assets/Plugins/Android/AndroidManifest.xml
@@ -13,6 +13,10 @@
       </intent-filter>
     </activity>
   </application>
+  
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.WAKE_LOCK"/>
+  
   <uses-permission android:name="android.permission.READ_PHONE_STATE" />
   <uses-permission android:name="android.permission.VIBRATE"/>
 </manifest>
